--- a/GestionDocente.API/appsettings.Development.json
+++ b/GestionDocente.API/appsettings.Development.json
@@ -1,8 +1,26 @@
 {
+  "ConnectionStrings": {
+    "IdentityDB_Connection": "CADENA DE CONEXION A LA BASE DE DATOS"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
+  },
+  "AllowedHosts": "*",
+  "PasswordSettings": {
+    "RequireDigit": true,
+    "RequireLowercase": true,
+    "RequireUppercase": true,
+    "RequireNonAlphanumeric": true,
+    "RequiredLength": 8,
+    "RequiredUniqueChars": 3
+  },
+  "LockoutSettings": {
+    "DefaultLockoutTimeSpan": "5",
+    "MaxFailedAccessAttempts": 3,
+    "AllowedForNewUsers": true
   }
 }
