--- a/GestionDocente.MVCAspNetCoreApp/GestionDocente.MVCAspNetCoreApp.csproj
+++ b/GestionDocente.MVCAspNetCoreApp/GestionDocente.MVCAspNetCoreApp.csproj
@@ -39,4 +39,9 @@
     <None Include="wwwroot\lib\jquery-validation\LICENSE.md" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="8.0.14" />
+    <PackageReference Include="Polly" Version="8.5.2" />
+  </ItemGroup>
+
 </Project>
