--- a/GestionDocente.API/appsettings.Development.json
+++ b/GestionDocente.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "IdentityDB_Connection": "CADENA DE CONEXION A LA BASE DE DATOS"
+    "IdentityDB_Connection": "Server=PCFLACO\\SQLExpress;Database=GestionDocenteDB;Trusted_Connection=True;TrustServerCertificate=true"
   },
   "Logging": {
     "LogLevel": {
