Actualizar cadena de conexión en appsettings.Development.json
Se ha reemplazado la cadena de conexión "IdentityDB_Connection" por un texto genérico que indica que se debe utilizar una "CADENA DE CONEXION A LA BASE DE DATOS".

--- a/GestionDocente.API/appsettings.Development.json
+++ b/GestionDocente.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "IdentityDB_Connection": "Server=PCFLACO\\SQLExpress;Database=GestionDocenteDB;Trusted_Connection=True;TrustServerCertificate=true"
+    "IdentityDB_Connection": "CADENA DE CONEXION A LA BASE DE DATOS"
   },
   "Logging": {
     "LogLevel": {
